@@ -4,6 +4,26 @@ author: "Your Name"
 date: "`r Sys.Date()`"  # Uses current date
 ---
 
+<!-- 
+You can edit this R Markdown document. 
+
+R command "code blocks" appear between the lines
+
+  ```{r}
+
+   and
+
+  ```
+
+It's generally not a good idea to edit the R code that the
+R Commander writes, but you can freely edit between R code
+blocks, for example to explain what you're doing and to draw
+conclusions from your data analysis.
+
+Autogenerated section titles, typically preceded by ###, 
+can also be edited. 
+-->
+
 
 ```{r echo=FALSE, message=FALSE}
 # include this code chunk as-is to set options
